--- a/octet/src/examples/example_particles/example_particles.vcxproj.filters
+++ b/octet/src/examples/example_particles/example_particles.vcxproj.filters
@@ -30,8 +30,11 @@
     <Filter Include="math">
       <UniqueIdentifier>{7c4ee1aa-1f06-43ef-9adf-8e1befbd9d0e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\shaders">
+    <Filter Include="shaders">
       <UniqueIdentifier>{22786083-47af-48b2-98c4-2963f667bc44}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="shader_code">
+      <UniqueIdentifier>{d5f818a1-a93f-4b75-8ce6-fec77ea40be7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -353,25 +356,25 @@
       <Filter>scene</Filter>
     </ClInclude>
     <ClInclude Include="..\..\shaders\bump_shader.h">
-      <Filter>Source Files\shaders</Filter>
+      <Filter>shaders</Filter>
     </ClInclude>
     <ClInclude Include="..\..\shaders\color_shader.h">
-      <Filter>Source Files\shaders</Filter>
+      <Filter>shaders</Filter>
     </ClInclude>
     <ClInclude Include="..\..\shaders\compute_shader.h">
-      <Filter>Source Files\shaders</Filter>
+      <Filter>shaders</Filter>
     </ClInclude>
     <ClInclude Include="..\..\shaders\phong_shader.h">
-      <Filter>Source Files\shaders</Filter>
+      <Filter>shaders</Filter>
     </ClInclude>
     <ClInclude Include="..\..\shaders\shader.h">
-      <Filter>Source Files\shaders</Filter>
+      <Filter>shaders</Filter>
     </ClInclude>
     <ClInclude Include="..\..\shaders\shaders.h">
-      <Filter>Source Files\shaders</Filter>
+      <Filter>shaders</Filter>
     </ClInclude>
     <ClInclude Include="..\..\shaders\texture_shader.h">
-      <Filter>Source Files\shaders</Filter>
+      <Filter>shaders</Filter>
     </ClInclude>
     <ClInclude Include="..\..\loaders\collada_builder.h">
       <Filter>loaders</Filter>
@@ -427,12 +430,23 @@
     <ClInclude Include="..\..\containers\string.h">
       <Filter>containers</Filter>
     </ClInclude>
-    <ClInclude Include="camera_controller.h" />
-    <ClInclude Include="fire_instance.h" />
-    <ClInclude Include="fire_opengl.h" />
-    <ClInclude Include="fluid_simulator.h" />
+    <ClInclude Include="fire_instance.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\scene\fire_particle_system.h">
       <Filter>scene</Filter>
+    </ClInclude>
+    <ClInclude Include="camera_controller.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fire_opengl.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fluid_simulator.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\shaders\fluid_shader.h">
+      <Filter>shaders</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -441,6 +455,51 @@
     </None>
     <None Include="..\..\resources\resources.inl">
       <Filter>resources</Filter>
+    </None>
+    <None Include="..\..\..\shaders\text.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\cubemap.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\default.vs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\default_solid.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\default_textured.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\helix.cs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\multitexture.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\raycast.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\raycast_meta.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\raycast_molecule.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\simple_color.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\simple_color.vs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\spots.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\panning_textured.fs">
+      <Filter>shader_code</Filter>
+    </None>
+    <None Include="..\..\..\shaders\fire.vs">
+      <Filter>shader_code</Filter>
     </None>
   </ItemGroup>
 </Project>
